// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row рендерит по дефолту 1`] = `
<div
  className="amber-row"
/>
`;

exports[`Row рендерит с простыми horizontalPadding 1`] = `
<div
  className="amber-row amber-row_paddingLeft-xs_xs amber-row_paddingRight-xs_xs amber-row_paddingStart-xs_xs amber-row_paddingEnd-xs_xs"
/>
`;

exports[`Row рендерит с простыми verticalPadding 1`] = `
<div
  className="amber-row amber-row_paddingTop-xs_xs amber-row_paddingBottom-xs_xs"
/>
`;

exports[`Row с непростым grow 1`] = `
<div
  className="amber-row amber-row_grow-xs_1 amber-row_grow-lg_3"
/>
`;

exports[`Row с непростым horizontalAlign 1`] = `
<div
  className="amber-row amber-row_horizontalAlign-xs_end amber-row_horizontalAlign-lg_beginning"
/>
`;

exports[`Row с непростым reverse 1`] = `
<div
  className="amber-row amber-row_reverse-xs"
/>
`;

exports[`Row с непростым shrink 1`] = `
<div
  className="amber-row amber-row_shrink-xs_1 amber-row_shrink-lg_3"
/>
`;

exports[`Row с непростым verticalAlign 1`] = `
<div
  className="amber-row amber-row_verticalAlign-xs_top amber-row_verticalAlign-lg_bottom"
/>
`;

exports[`Row с непростыми horizontalPadding 1`] = `
<div
  className="amber-row amber-row_paddingLeft-xs_m amber-row_paddingLeft-xl_sm amber-row_paddingRight-xs_l amber-row_paddingRight-sm_m amber-row_paddingStart-xs_m amber-row_paddingStart-xl_sm amber-row_paddingEnd-xs_l amber-row_paddingEnd-sm_m"
/>
`;

exports[`Row с непростыми verticalPadding 1`] = `
<div
  className="amber-row amber-row_paddingTop-xs_m amber-row_paddingTop-xl_sm amber-row_paddingBottom-xs_l amber-row_paddingBottom-sm_m"
/>
`;

exports[`Row с простым grow 1`] = `
<div
  className="amber-row amber-row_grow-xs_1"
/>
`;

exports[`Row с простым horizontalAlign 1`] = `
<div
  className="amber-row amber-row_horizontalAlign-xs_end"
/>
`;

exports[`Row с простым reverse 1`] = `
<div
  className="amber-row amber-row_reverse-xs"
/>
`;

exports[`Row с простым shrink 1`] = `
<div
  className="amber-row amber-row_shrink-xs_1"
/>
`;

exports[`Row с простым verticalAlign 1`] = `
<div
  className="amber-row amber-row_verticalAlign-xs_top"
/>
`;
